--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.26.0",
-    "cors": "^2.8.5",
-    "express": "^4.17.2",
-    "nodeman": "^1.1.2"
+    "axios": "0.26.0",
+    "cors": "2.8.5",
+    "express": "4.17.2",
+    "nodemon": "2.0.15"
   }
 }
