--- a/config/config.json
+++ b/config/config.json
@@ -4,7 +4,8 @@
     "password": "123456",
     "database": "films2022",
     "host": "127.0.0.1",
-    "dialect": "mysql"
+    "dialect": "mysql",
+    "jwt_secret":"test1"
   },
   "test": {
     "username": "root",
