--- a/config/config.example.json
+++ b/config/config.example.json
@@ -1,11 +1,11 @@
 {
   "development": {
-    "username": "root",
-    "password": "123456",
-    "database": "films2022",
+    "username": "tu usuario",
+    "password": "tu contra",
+    "database": "nombre de tu db",
     "host": "127.0.0.1",
     "dialect": "mysql",
-    "jwt_secret":"test1"
+    "jwt_secret":"tu secreto"
   },
   "test": {
     "username": "root",
