--- a/config/config.json
+++ b/config/config.json
@@ -4,8 +4,7 @@
     "password": "123456",
     "database": "films2022",
     "host": "127.0.0.1",
-    "dialect": "mysql",
-    "jwt_secret":"test1"
+    "dialect": "mysql"
   },
   "test": {
     "username": "root",
