--- a/config/config.example.json
+++ b/config/config.example.json
@@ -4,8 +4,7 @@
     "password": "tu contra",
     "database": "nombre de tu db",
     "host": "127.0.0.1",
-    "dialect": "mysql",
-    "jwt_secret":"tu secreto"
+    "dialect": "mysql"
   },
   "test": {
     "username": "root",
