--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "4.17.2",
     "jsonwebtoken": "8.5.1",
     "mysql2": "2.3.3",
+    "nodemailer": "^6.7.2",
     "nodemon": "2.0.15",
     "sequelize": "6.16.1"
   }
