Improved RegisterByEmail and LoginByEmail controller

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,6 @@ AUTH_SECRET="Tu secreto"
 AUTH_EXPIRES="72h"
 AUTH_ROUNDS=10
 
-nodemailerUser = tu correo
-nodemailerPass = la contraseña de tu correo
+nodemailerUser = 'tu correo'
+nodemailerPass = 'la contraseña de tu correo'
 
