env.port added to index.js

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 AUTH_SECRET="Tu secreto"
 AUTH_EXPIRES="72h"
 AUTH_ROUNDS=10
-
+PORT=3000
 nodemailerUser = 'tu correo'
 nodemailerPass = 'la contraseña de tu correo'
 
