Heroku deploy config updated

--- a/.env.example
+++ b/.env.example
@@ -10,4 +10,4 @@ MYSQL_USER= tu usuario de workbench
 MYSQL_PASSWORD= tu contraseña
 MYSQL_HOST= tu host
 MYSQL_PORT= el puerto a utilizar en la base de datos
-DIALECT= el tipo de base de datos
+MYSQL_DIALECT= el tipo de base de datos
